--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -22,6 +22,136 @@ page {
   
 }
 
+.save{
+  width: 650rpx;
+  height: 80rpx;
+  background: #f3ebb2;
+  color: rgb(27, 27, 27);
+  font-size: 32rpx;
+  border-radius: 20rpx;
+  margin:50rpx;
+  text-align: center;
+}
+
+.baocun{
+  width: 300rpx;
+  height: 80rpx;
+  float: left;
+  margin: 20rpx 50rpx 50rpx 25rpx;
+  text-align: center;
+  background-color: rgb(214, 187, 114);
+  color: rgb(27, 27, 27);
+  font-size: 32rpx;
+  border-radius: 20rpx;
+}
+
+.baocun.left{
+  margin: 20rpx 25rpx 50rpx 50rpx;
+}
+
+.imageShow{
+  width: 650rpx;
+  height: 1000rpx;
+  margin: 50rpx 50rpx 0rpx 50rpx;
+}
+
+.imageBox{
+  width: 750rpx;
+  background: rgba(0,0,0,0.7);
+}
+
+.button_image{
+  align-content: center;
+  justify-content: center;
+  max-width:100%;
+  max-height:100%;
+}
+
+.smallbutton{
+  text-align: center;
+  float: left;
+  width: 240rpx;
+  height:80rpx;
+  background-color: rgb(214, 187, 114);
+  border:none;
+  justify-content:center;
+  padding: 8rpx 24rpx
+}
+
+.smallbutton.first{
+  margin: 80rpx 20rpx 30rpx 115rpx;
+}
+
+.smallbutton.second{
+  margin: 80rpx 115rpx 30rpx 20rpx;
+  padding: 4rpx 12rpx;
+}
+
+.smallbutton.third{
+  margin: 0rpx 20rpx 80rpx 115rpx;
+}
+
+.smallbutton.fourth{
+  margin: 0rpx 115rpx 80rpx 20rpx;
+}
+
+.upload-button{
+  text-align: center;
+  width: 288rpx;
+  height:96rpx;
+  background-color: rgb(214, 187, 114);
+  border:none;
+  justify-content:center;
+}
+
+.content-block{
+  padding: 5rpx 50rpx;
+  text-align: center;
+}
+
+.user-image-block{
+  padding:  50rpx 50rpx;
+}
+
+.image-block{
+  padding:  50rpx 20rpx;
+  width: 710rpx;
+}
+
+.title-block{
+  margin:10rpx 80rpx;
+  text-align: right;
+}
+
+.text-block{
+  margin:280rpx 20rpx 30rpx 30rpx;
+  text-indent: 40rpx;
+  
+}
+
+.background {
+  width: 100%;
+  height: 100%;
+  position:fixed; 
+  background-size:100% 100%;
+  z-index: -1;
+}
+
+.button1{
+  margin:20rpx 25rpx;
+  left:45rpx;
+  float:left;
+  width: 180rpx;
+  font-size: 28rpx;
+  background-color: rgb(248, 233, 147);
+}
+
+.button2{
+  width: 400rpx;
+  border: none;
+  background: none;
+}
+
 .userinfo-avatar {
   width: 100rpx;
   height: 100rpx;
@@ -37,7 +167,7 @@ page {
 
 .userinfo-nickname {
   font-size: 32rpx;
-  color: #007aff;
+  color: #ced3d8;
   background-color: white;
   background-size: cover;
 }
@@ -58,7 +188,7 @@ page {
   width: 100%;
   line-height: 52px;
   font-size: 34rpx;
-  color: #007aff;
+  color: #4d4531;
 }
 
 .uploader-container {
@@ -113,7 +243,7 @@ page {
   width: 140rpx;
   height: 140rpx;
   border-radius: 50%;
-  background: linear-gradient(#007aff, #0063ce);
+  background: linear-gradient(#7c8085, #0063ce);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   display: flex;
   align-content: center;
